--- a/package.json
+++ b/package.json
@@ -15,5 +15,17 @@
   "bugs": {
     "url": "https://github.com/Unicornsunited/housedating/issues"
   },
-  "homepage": "https://github.com/Unicornsunited/housedating#readme"
+  "homepage": "https://github.com/Unicornsunited/housedating#readme",
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-sass": "^1.1.0",
+    "load-grunt-tasks": "^3.4.1",
+    "ui-router": "^1.0.0-alpha0"
+  },
+  "devDependencies": {
+    "grunt-contrib-watch": "^0.6.1"
+  }
 }
