--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prestart": "npm install --production --suppress-warnings",
+    "start": "node -e \"require('grunt').tasks(['build']);",
+    "predev": "npm install",
+    "dev": "grunt"
   },
   "repository": {
     "type": "git",
@@ -17,15 +20,18 @@
   },
   "homepage": "https://github.com/Unicornsunited/housedating#readme",
   "dependencies": {
+    "angular-ui-router": "^0.2.18",
+    "express": "^4.13.4",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "^1.0.0",
-    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-uglify": "^0.11.1",
     "grunt-sass": "^1.1.0",
     "load-grunt-tasks": "^3.4.1",
-    "ui-router": "^1.0.0-alpha0"
+    "swing": "^3.0.2"
   },
   "devDependencies": {
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.5.2"
   }
 }
