--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install --production --suppress-warnings",
-    "start": "node -e \"require('grunt').tasks(['build']);",
+    "start": "node -e \"require('grunt').tasks(['deploy']);\"",
     "predev": "npm install",
     "dev": "grunt"
   },
@@ -26,12 +26,13 @@
     "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.1",
+    "grunt-express-server": "^0.5.2",
     "grunt-sass": "^1.1.0",
     "load-grunt-tasks": "^3.4.1",
+    "request": "^2.69.0",
     "swing": "^3.0.2"
   },
   "devDependencies": {
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-express-server": "^0.5.2"
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
