--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/Unicornsunited/housedating#readme",
   "dependencies": {
+    "angular": "^1.5.0",
     "angular-ui-router": "^0.2.18",
+    "babel-preset-es2015": "^6.6.0",
     "express": "^4.13.4",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
@@ -30,6 +32,7 @@
     "grunt-sass": "^1.1.0",
     "load-grunt-tasks": "^3.4.1",
     "request": "^2.69.0",
+    "svg4everybody": "^2.0.3",
     "swing": "^3.0.2"
   },
   "devDependencies": {
