--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-jade": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.1",
     "grunt-express-server": "^0.5.2",
     "grunt-sass": "^1.1.0",
     "load-grunt-tasks": "^3.4.1",
     "request": "^2.69.0",
-    "svg4everybody": "^2.0.3",
-    "swing": "^3.0.2"
+    "svg4everybody": "^2.0.3"
   },
   "devDependencies": {
     "grunt-contrib-watch": "^0.6.1"
